  28-Nov-2020  - V0.14 Add CARDTargetProvider() and tests
  30-Nov-2020  - V0.15 Add SAbDabTargetProvider() and tests
   1-Dec-2020  - V0.16 Connect to UniProtIdMappingProvider() and add tagged fasta comment output.
   2-Dec-2020  - V0.17 Migrate molecule based ChEMBL methods to rcsb.utils.chemref.ChEMBLProvider()
   6-Dec-2020  - V0.18 Expose an exportFasta() method in each provider and add taxon output file options
  13-Dec-2020  - V0.19 Make Pharos sql restore a shell process.
  14-Dec-2020  - V0.20 Suppress stderr in the export of mysql table data.
  13-May-2021  - V0.21 Additional caching and stashing functions for all providers
  12-Jun-2021  - V0.22 Adding SAbDabTargetFeatureProvider() and CARDTargetFeatureProvider() modules
  13-Jun-2021  - V0.23 Move features to separate paths in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
  13-Jun-2021  - V0.24 Add feature identifiers to the outputs of CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
  14-Jun-2021  - V0.25 Standardized version and timestamp in CARDTargetFeatureProvider() and SAbDabTargetFeatureProvider()
  19-Jun-2021  - V0.26 Add cofactor and activity provider modules for ChEMBL, DrugBank, and Pharos and associated tests.
  20-Jun-2021  - V0.27 Move ChEMBL API settings into the ChEMBLTargetActivityProvider and ChEMBLTargetMechanismProvider modules
  20-Jun-2021  - V0.28 Add method getTargetIdList() in ChEMBLTargetActivityProvider module and standardize some method prototypes
  20-Jun-2021  - V0.29 Add multiprocessing class to ChEMBLTargetActivityProvider and standardize cofactor attribute names
  21-Jun-2021  - V0.30 Make ChEMBL activity query more selective and focus error handling more specifically on return issues.
  22-Jun-2021  - V0.31 Add name and mechanism queries in the ChEMBLTargetActivityProvider workflow. Use DrugBankProvider is a
                       data source in DrugBankTargetProvider() rather than FASTA downloads.